syntax = "proto3";

option go_package = "re-sep-content/internal/proto";

import "google/protobuf/timestamp.proto";

service Content {
	rpc GetArticle(EntryName) returns (Article) {}
}

message EntryName {
	string entryName = 1;
}

message TOCItem {
	string id = 1;
	string content = 2;
	repeated TOCItem subItems = 3;
}

message Article {
	string entryName = 1;
	string title = 2;
	google.protobuf.Timestamp Issued = 3;
	google.protobuf.Timestamp Modified = 4;
	string htmlText = 5;
	repeated string authors = 6;
	repeated TOCItem toc = 7;
}
